express/blocks/exp-intl-template-x/exp-intl-template-x.css
/* ... */
main .exp-intl-template-x.horizontal.three-templates .exp-intl-template-x-inner-wrapper .carousel-container .button.carousel-arrow.carousel-arrow-left {
    position: absolute;
    right: 42px;
}

main .exp-intl-template-x.horizontal.three-templates .carousel-container .carousel-fader-left {
    display: contents;
    opacity: 1;
}

main .exp-intl-template-x.horizontal.three-templates .carousel-container .carousel-fader-left.arrow-hidden a {
    opacity: 0.5;
}

main .exp-intl-template-x.horizontal.three-templates .carousel-container .carousel-fader-right {
    display: contents;
    opacity: 1;
}

main .exp-intl-template-x.horizontal.three-templates .carousel-container .carousel-fader-right.arrow-hidden a {
    opacity: 0.5;
}

main .exp-intl-template-x.horizontal.three-templates  .carousel-container .carousel-platform.left-fader:not(.right-fader) {
    mask-image: none;
    -webkit-mask-image: none;
}

main .exp-intl-template-x.horizontal.three-templates .carousel-container .carousel-platform.right-fader:not(.left-fade) {
    mask-image: none;
    -webkit-mask-image: none;
}

.exp-intl-template-x.horizontal.three-templates .template:not(.placeholder) img:not(.icon):not(.icon-share-arrow) {
    width: 216px;
    height: 324px;
}

.exp-intl-template-x.horizontal.three-templates .template.carousel-element {
    margin-right: 0px;
}

.exp-intl-template-x.horizontal.three-templates .exp-intl-template-x-inner-wrapper .carousel-container {
    width: 100vw;
}

.exp-intl-template-x.horizontal.four-templates .template:not(.placeholder) img:not(.icon):not(.icon-share-arrow) {
    width: 216px;
    height: 324px;
}

.exp-intl-template-x-wrapper.horizontal > *:not(.exp-intl-template-x.horizontal), .exp-intl-template-x-wrapper.horizontal:not(.holiday) > .exp-intl-template-x.horizontal.four-templates > *:not(.carousel-container) {
    padding-left: 0;   
}

main .exp-intl-template-x.horizontal.four-templates .exp-intl-template-x-inner-wrapper .carousel-container .button.carousel-arrow.carousel-arrow-left {
    position: absolute;
    right: 42px;
}

main .exp-intl-template-x.horizontal.four-templates .carousel-container .carousel-fader-left {
    display: contents;
    opacity: 1;
}

main .exp-intl-template-x.horizontal.four-templates .carousel-container .carousel-fader-left.arrow-hidden a {
    opacity: 0.5;
}

main .exp-intl-template-x.horizontal.four-templates .carousel-container .carousel-fader-right {
    display: contents;
    opacity: 1;
}

main .exp-intl-template-x.horizontal.four-templates .carousel-container .carousel-fader-right.arrow-hidden a {
    opacity: 0.5;
}

main .exp-intl-template-x.horizontal.four-templates  .carousel-container .carousel-platform.left-fader:not(.right-fader) {
    mask-image: none;
    -webkit-mask-image: none;
}

main .exp-intl-template-x.horizontal.four-templates .carousel-container .carousel-platform.right-fader:not(.left-fade) {
    mask-image: none;
    -webkit-mask-image: none;
}

.exp-intl-template-x.horizontal.four-templates .template:not(.placeholder) img:not(.icon):not(.icon-share-arrow) {
    width: 216px;
    height: 324px;
}

main .exp-intl-template-x.sixcols .masonry-col, main .exp-intl-template-x.fullwidth .masonry-col {
    max-width: 175px;
}

.exp-intl-template-x.horizontal .template-tabs button.template-tab-button:first-of-type {
    margin-left: 0;
}

.exp-intl-template-x.horizontal .template-tabs button.template-tab-button.active,
.exp-intl-template-x.horizontal .template-tabs button.template-tab-button:hover {
    border-bottom: 2px solid var(--color-black);
}

.exp-intl-template-x.horizontal .template-tabs button.template-tab-button.active {
    font-weight: 700;
}

.exp-intl-template-x-wrapper .template-title.horizontal .text-wrapper * {
    text-align: left;
}

.exp-intl-template-x-wrapper .template-title.horizontal .text-wrapper p {
    margin-bottom: 0;
}

.exp-intl-template-x-wrapper .exp-intl-template-x.tabbed .template-title.horizontal .text-wrapper > div {
    width: 100%;
}

.exp-intl-template-x-inner-wrapper {
    display: flex;
    justify-content: center;
    margin: 20px auto 0 auto;
    font-size: var(--body-font-size-m);
    font-weight: var(--body-font-weight);
    text-align: left;
}

.exp-intl-template-x.sixcols .exp-intl-template-x-inner-wrapper,
.exp-intl-template-x.fullwidth .exp-intl-template-x-inner-wrapper {
    flex-direction: row;
    justify-content: center;
}

.exp-intl-template-x.horizontal .exp-intl-template-x-inner-wrapper {
    margin-top: 0;
    transition: opacity 0.2s;
}

.exp-intl-template-x.fullwidth.holiday .exp-intl-template-x-inner-wrapper {
    max-height: 0;
    position: relative;
    transition: max-height 0.5s, padding-top 0.5s;
    overflow: hidden;
    margin-right: 56px;
    margin-left: 56px;
}

.exp-intl-template-x.fullwidth.holiday.expanded .exp-intl-template-x-inner-wrapper {
    max-height: 300px;
    margin-left: 56px;
    margin-right: 56px;
}

.exp-intl-template-x.fullwidth.holiday.animated video {
    position: absolute;
    top: 0;
    left: 0;
    object-fit: cover;
    height: 100%;
    width: 100vw;
    z-index: -1;
    pointer-events: none;
    transition: opacity 0.2s;
}

.exp-intl-template-x.fullwidth.holiday.expanded.animated video {
    transition: opacity 1s;
    padding: 0;
}

.exp-intl-template-x.fullwidth.sm-view .exp-intl-template-x-inner-wrapper,
.exp-intl-template-x.fullwidth.md-view .exp-intl-template-x-inner-wrapper,
.exp-intl-template-x.fullwidth.lg-view .exp-intl-template-x-inner-wrapper {
    padding: 0;
}

.exp-intl-template-x.with-categories-list .exp-intl-template-x-inner-wrapper {
    min-height: 700px;
}

.exp-intl-template-x.fullwidth.lg-view > .exp-intl-template-x-inner-wrapper > .masonry-col {
    max-width: 352px;
    text-align: center;
}

.exp-intl-template-x-wrapper .template-title {
    margin: 0 12px 20px 12px;
}
/* ... */

